--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "spring-database-part-1"]
 	path = spring-database-part-1
 	url = https://github.com/yju0808/spring-database-part-1.git
+[submodule "spring-database-part-2"]
+	path = spring-database-part-2
+	url = https://github.com/yju0808/spring-database-part-2.git
