add submodule : spring-core-principles-advanced

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "spring-database-part-2"]
 	path = spring-database-part-2
 	url = https://github.com/yju0808/spring-database-part-2.git
+[submodule "submodules/spring-core-principles-advanced"]
+	path = submodules/spring-core-principles-advanced
+	url = https://github.com/yju0808/spring-core-principles-advanced.git
